--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,9 +1,10 @@
 @import 'variables';
 
-@import '~bootstrap/scss/bootstrap';
+//@import '~bootstrap/scss/bootstrap';
+@import 'vuetify/dist/vuetify.min.css';
 @import '~sweetalert2/dist/sweetalert2';
 @import '~@fortawesome/fontawesome-svg-core/styles';
-
+@import '@mdi/font/scss/materialdesignicons';
 @import 'elements/card';
 @import 'elements/navbar';
 @import 'elements/buttons';
